--- a/style.css
+++ b/style.css
@@ -6,5 +6,29 @@
 .red{
   background-color: red;
   color: white;
-
 }
+
+.blue {
+  background-color: blue;
+  color: white;
+}
+.size {
+  font-size: 30px;
+}
+
+.newfont {
+  font-family: Georgia;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.spin{
+  -webkit-animation: spin 5s infinite;
+  }
+  
+  @keyframes spin {
+      from {transform:rotate(0deg);}
+      to {transform:rotate(360deg);}
+  }
